MM4 navigation spacing fixes

--- a/sitedev/css/modules.css
+++ b/sitedev/css/modules.css
@@ -331,19 +331,24 @@
 #moduleMM4 ul {
 	margin: 0;
 	padding: 0;
-	margin: 0.5em 0 -0.5em 0;
+	margin: 0.5em 0 0 0;
 	list-style: none;
 }
 
 #moduleMM4 ul li {
 	float: left;
-	padding: 0 0.8em;
+	padding: 0 0.55em;
 	border-right: 1px solid #2a72a7;
-	height: 2.0em;
+	height: 1.3em;
 }
 
 #moduleMM4 ul li a {
 	padding: 0;
+	margin-bottom: 0.5em !important;
+}
+
+#moduleMM4 ul li a.more {
+	margin-top: 0 !important;
 }
 
 #moduleMM4 ul li.first {
@@ -355,6 +360,9 @@
 	border-right: 0 none;
 }
 
+#moduleMM4 div.line {
+	margin: 0.5em 0 0 0 !important;
+}
 
 /* Side Navigation Modules */
 
